Sync all content

--- a/content/resources/1506649-2.md
+++ b/content/resources/1506649-2.md
@@ -4,6 +4,7 @@ description: ''
 file: /courses/cms-608-game-design-spring-2014/50171a9c1dfb5049a9576f1751835586_1506649.vtt
 file_type: application/x-subrip
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 resourcetype: Other
 title: 3play caption file
