--- a/content/resources/1506651-3.md
+++ b/content/resources/1506651-3.md
@@ -4,6 +4,7 @@ description: ''
 file: /courses/cms-608-game-design-spring-2014/2ecbdb1f4cb3e7c8a5ea1ba552bb02e0_1506651.pdf
 file_type: application/pdf
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 resourcetype: Document
 title: 3play pdf file
