--- a/content/resources/1506651-4.md
+++ b/content/resources/1506651-4.md
@@ -4,6 +4,7 @@ description: ''
 file: /courses/cms-608-game-design-spring-2014/781bbde7429b52b8ad0a2f1b7256d13d_1506651.vtt
 file_type: application/x-subrip
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 resourcetype: Other
 title: 3play caption file
