--- a/content/resources/1506655-1.md
+++ b/content/resources/1506655-1.md
@@ -4,6 +4,7 @@ description: ''
 file: /courses/cms-608-game-design-spring-2014/01ff7f8e4c7bd30d8ceee7db264987ad_1506655.pdf
 file_type: application/pdf
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 resourcetype: Document
 title: 3play pdf file
