--- a/content/resources/1506656-2.md
+++ b/content/resources/1506656-2.md
@@ -4,6 +4,7 @@ description: ''
 file: /courses/cms-608-game-design-spring-2014/7a3d574f1bc7568fa439a8f7f0a90ce5_1506656.vtt
 file_type: application/x-subrip
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 resourcetype: Other
 title: 3play caption file
