--- a/content/resources/1506659-1.md
+++ b/content/resources/1506659-1.md
@@ -4,6 +4,7 @@ description: ''
 file: /courses/cms-608-game-design-spring-2014/4e1b226a88ba8b0e77eb4bc1f4317200_1506659.pdf
 file_type: application/pdf
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 resourcetype: Document
 title: 3play pdf file
