--- a/content/resources/1506695-5.md
+++ b/content/resources/1506695-5.md
@@ -4,6 +4,7 @@ description: ''
 file: /courses/cms-608-game-design-spring-2014/05e9c91180a852fea7ffe7c723875185_1506695.vtt
 file_type: application/x-subrip
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 resourcetype: Other
 title: 3play caption file
