--- a/content/resources/1506699-2.md
+++ b/content/resources/1506699-2.md
@@ -4,6 +4,7 @@ description: ''
 file: /courses/cms-608-game-design-spring-2014/2a9dc2eba6ed5981a99105adc0fd1eeb_1506699.vtt
 file_type: application/x-subrip
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 resourcetype: Other
 title: 3play caption file
