--- a/content/resources/1506700-1.md
+++ b/content/resources/1506700-1.md
@@ -4,6 +4,7 @@ description: ''
 file: /courses/cms-608-game-design-spring-2014/f9542128760440be8ec8e6f35f34ef3d_1506700.pdf
 file_type: application/pdf
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 resourcetype: Document
 title: 3play pdf file
