--- a/content/resources/1506702.md
+++ b/content/resources/1506702.md
@@ -4,6 +4,7 @@ description: ''
 file: /courses/cms-608-game-design-spring-2014/e40671ee85748b9774dddb2a51b62eeb_1506702.srt
 file_type: application/x-subrip
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 resourcetype: Other
 title: 3play caption file
