--- a/content/resources/cms-608s14.md
+++ b/content/resources/cms-608s14.md
@@ -11,10 +11,10 @@ image_metadata:
   image-alt: Colored pieces on a board of hexagons, many sided dice, and a sheet of
     rules.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: cms-608s14.jpg
 uid: ff5dc02a-5f56-2c9e-e28b-6027595b998b
 ---
 Roman Conquest: The First Triumvirate, a game created by a group of MIT students. Photograph by Luke Phelan. Used with permission.
-
